--- a/common/css/cms.css
+++ b/common/css/cms.css
@@ -38,7 +38,7 @@ hr {
     outline: none;
     padding: 6px 0;
 }
-.alert {
+.form-group .alert {
     margin: 10px 0 0;
 }
 .modal.type-success .modal-header {
