--- a/common/css/cms.css
+++ b/common/css/cms.css
@@ -4,7 +4,7 @@ html, body {
     position: relative;
 }
 body {
-    color: #73879C;
+    color: #656d78;
     background: #2A3F54;
     font-family: "Helvetica Neue", Roboto, Arial, "Droid Sans", sans-serif;
     font-size: 13px;
@@ -60,6 +60,24 @@ hr {
     border-radius: 0;
     line-height: 30px;
     width: 100%;
+}
+textarea.form-control {
+    resize: vertical;
+}
+.row {
+    margin-left: -10px;
+    margin-right: -10px;
+}
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.form-horizontal .form-group {
+    margin-right: -10px;
+    margin-left: -10px;
+}
+.panel_toolbox {
+    float: right;
 }
 /* LEFT SIDEBAR */
 .main .left-col {
@@ -139,6 +157,7 @@ body.nav-sm .left-col .sidebar-footer {
 	margin-left: 230px;
 	background: #F7F7F7;
 	min-height: 100%;
+        background: #f5f5f5 url('../img/bg-cms.png') left top repeat;
 }
 .left-col .logo {
 	padding: 5px 10px;
@@ -173,7 +192,7 @@ body.nav-sm .left-col .sidebar-footer {
     color: #fff;
     font-size: 14px;
 }
-.nav > li > a {
+#sidebar-menu .nav > li > a {
 	padding: 10px 15px 10px;
 	color: #E7E7E7;
 }
@@ -467,6 +486,9 @@ table.jambo_table tbody tr.selected td {
     display: block;
     margin: 0 0 2px;
 }
+.btn.btn-app > .fa.fa-star {
+    color: #FFA019;
+}
 .btn.btn-app > .fa.fa-plus-circle,
 .btn.btn-app > .fa.fa-check {
     color: #4cae4c;
@@ -489,12 +511,15 @@ table.jambo_table tbody tr.selected td {
 .x_panel {
     position: relative;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     padding: 10px 17px;
     display: inline-block;
     background: #fff;
-    border: 1px solid #E6E9ED;
+    border-radius: 5px;
     opacity: 1;
+    -moz-box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.2);
     -moz-transition: all .2s ease;
     -o-transition: all .2s ease;
     -webkit-transition: all .2s ease;
@@ -509,6 +534,9 @@ table.jambo_table tbody tr.selected td {
 .x_panel .x_title h2 {
     margin: 5px 0;
     font-size: 18px;
+    color: #434a54;
+    float: left;
+    display: block;
 }
 .x_panel .x_title h2 small {
     margin-left: 10px;
@@ -573,6 +601,73 @@ table.jambo_table tbody tr.selected td {
 .x_panel .image_preview .image_del:hover .fa-close {
     display: block;
 }
+.panel_toolbox > li {
+    float: left;
+}
+.panel_toolbox > li > a {
+    padding: 5px;
+    font-size: 14px;
+}
+.panel_toolbox > li > a:hover,
+.panel_toolbox > li > a:focus {
+    background: none;
+}
+.panel_toolbox > li > a i {
+    margin-right: 0;
+}
+.panel.tabs {
+    margin-top: 40px;
+}
+.nav-tabs {
+    margin-top: -40px;
+    padding: 0px 10px;
+    border-bottom: none;
+}
+.nav-tabs > li > a,
+.nav-tabs > li > a:hover,
+.nav-tabs > li > a:focus {
+    margin-right: 10px;
+    background-color: #FFF;
+    border-bottom: none;
+}
+.nav-tabs > li.active > a, 
+.nav-tabs > li.active > a:hover, 
+.nav-tabs > li.active > a:focus {
+    border-top: 2px solid #33414e;
+}
+/* FORM GROUP SEPARATED */
+.form-group-separated {
+    border-top: 1px dashed #D5D5D5;
+}
+.form-group-separated .form-group {
+    border-bottom: 1px dashed #D5D5D5;
+    margin-bottom: 0px;
+}
+.form-group-separated .form-group .control-label {
+    padding-top: 18px;
+}
+.form-group-separated .form-group [class^="col-md-"] {
+    border-left: 1px dashed #D5D5D5;
+    padding: 12px 10px;
+}
+.form-group-separated .form-group [class^="col-md-"]:first-child {
+    border-left: 0px;
+}
+.form-group-separated .form-group:last-child {
+    border-bottom: 0px;
+}
+.form-group-separated .form-group.form-group-border-right [class^="col-md-"] {
+    border-left: 0px;
+    border-right: 1px dashed #D5D5D5;
+}
+.form-group-separated .form-group.form-group-border-right [class^="col-md-"]:last-child {
+    border-right: 0px;
+    margin-left: 0px;
+}
+.form-group-separated.panel-body,
+.form-group-separated.modal-body {
+    padding: 0px;
+}
 /* PAGINATION */
 .paging a,
 .paging span{
@@ -597,6 +692,46 @@ table.jambo_table tbody tr.selected td {
     background-color: #1ABB9C !important;
     border-color: rgba(38, 185, 154, 0.59) !important;
     color: #fff;
+}
+/* TAGS */
+.tagsinput {
+    border: 1px solid #CCC;
+    background: #FFF;
+    padding: 5px 5px 0;
+    width: 300px;
+    overflow-y: auto;
+}
+.tagsinput span.tag {
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    display: block;
+    float: left;
+    padding: 5px 9px;
+    text-decoration: none;
+    background: #1ABB9C;
+    color: #F1F6F7;
+    margin-right: 5px;
+    font-weight: 500;
+    margin-bottom: 5px;
+    font-family: helvetica;
+    line-height: 1;
+}
+.tagsinput span.tag a {
+    font-weight: bold;
+    color: #F1F6F7;
+    text-decoration: none;
+    font-size: 11px;
+}
+.tagsinput input {
+    width: 80px;
+    margin: 0px;
+    font-family: helvetica;
+    font-size: 13px;
+    border: 1px solid transparent;
+    padding: 3px;
+    background: transparent;
+    color: #000;
+    outline: 0px;
 }
 @media (max-width: 1024px) {
     table.jambo_table .btn {
