--- a/common/css/reset.css
+++ b/common/css/reset.css
@@ -105,6 +105,7 @@ input[type="text"]{
 .PT35{padding-top:35px;}
 .PT40{padding-top:40px;}
 .PT50{padding-top:50px;}
+.PL20{padding-left: 20px;}
 
 .MB0{margin-bottom:0px;}
 .MB5{margin-bottom:5px;}
